# qt-feb-2026

./: README.md
Day1/: README.md
Day1/ConsoleBasedThreads/: CMakeLists.txt  main.cpp  thread.cpp  thread.h
Day1/GUIThreadsApp/: CMakeCache.txt  CMakeLists.txt  GUIThreadsApp  MainDlg.cpp  MainDlg.h  Makefile  TabDlg.cpp  TabDlg.h  Thread.cpp  Thread.h  cmake_install.cmake  main.cpp
Day1/GUIThreadsApp/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Day1/GUIThreadsApp/GUIThreadsApp_autogen/: deps  mocs_compilation.cpp
Day1/GUIThreadsApp/GUIThreadsApp_autogen/EWIEGA46WW/: moc_MainDlg.cpp  moc_MainDlg.cpp.d  moc_TabDlg.cpp  moc_TabDlg.cpp.d  moc_Thread.cpp  moc_Thread.cpp.d
Day1/HelloQt/: CMakeLists.txt
Day1/HelloQtWidgets/: HelloQtWidgets  HelloQtWidgets.pro  Makefile  MyDlg.cpp  MyDlg.h  main.cpp
Day1/MathApp/: CMakeCache.txt  CMakeLists.txt  MainDlg.cpp  MainDlg.h  (+3 more)
Day2/DigitalClock/: CMakeCache.txt  CMakeLists.txt  ClockDlg.cpp  ClockDlg.h  Makefile  cmake_install.cmake  main.cpp
Day2/DigitalClock/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Day2/DigitalClock/DigitalClock_autogen/: deps  mocs_compilation.cpp
Day2/DigitalClock/DigitalClock_autogen/EWIEGA46WW/: moc_ClockDlg.cpp  moc_ClockDlg.cpp.d
Day3/: README.md
Day3/QMLMathRefactoredV1/: CMakeLists.txt  Edit.qml  Makefile  Math.cpp  Math.h  main.cpp  main.qml
Day3/QMLMathRefactoredV1/.qt/: MathApp_qml.cmake  MathApp_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
Day3/QMLMathRefactoredV1/.qt/deploy_qml_imports/: MathApp.cmake
Day3/QMLMathRefactoredV1/.qt/qml_imports/: MathApp_build.cmake  MathApp_build.rsp  MathApp_conf.rsp
Day3/QMLMathRefactoredV1/.qt/rcc/: MathApp_raw_qml_0.qrc  qmake_App.qrc  qrc_MathApp_raw_qml_0.cpp  qrc_qmake_App.cpp
Day3/QMLMathRefactoredV1/.rcc/qmlcache/: MathApp_main_qml.cpp  MathApp_main_qml.cpp.aotstats  MathApp_qml_loader_file_list.rsp  MathApp_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_MathApp.aotstatslist
Day3/QMLMathRefactoredV1/.rcc/qmllint/: MathApp.rsp  MathApp_json.rsp  MathApp_module.rsp
Day4/: README.md
Day4/GridView/: CMakeLists.txt  ContactsModel.qml  main.qml
Day4/GridView/.qt/: GridViewDemo_qml.cmake  GridViewDemo_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
Day4/GridView/.qt/deploy_qml_imports/: GridViewDemo.cmake
Day4/GridView/.qt/qml_imports/: GridViewDemo_build.rsp  GridViewDemo_conf.rsp
Day4/GridView/.qt/rcc/: GridViewDemo_raw_qml_0.qrc  qmake_App.qrc  qrc_GridViewDemo_raw_qml_0.cpp  qrc_qmake_App.cpp
Day4/GridView/.rcc/qmlcache/: GridViewDemo_main_qml.cpp  GridViewDemo_main_qml.cpp.aotstats  GridViewDemo_qml_loader_file_list.rsp  GridViewDemo_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_GridViewDemo.aotstatslist
Day4/GridView/.rcc/qmllint/: GridViewDemo.rsp  GridViewDemo_json.rsp  GridViewDemo_module.rsp
(+300 files in other folders)
